--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 
   <script src="./assets/scripts/scripts.js"></script>
   <script src="./data/global.js"></script>
-  <script src="./lang/fa.js"></script>
+  <script src="./lang/中文.js"></script>
   <script src="./lang/en.js"></script>
 </html>
