--- a/jobs.html
+++ b/jobs.html
@@ -28,8 +28,8 @@
     <div id="include_navbar"></div>
 
     <div class="container pt-4" data-aos="fade-in" id="content_wrapper">
-      <h1 id="jobs_title" class="title"></h1>
-      <div id="jobs_data"></div>
+      <h1 id="research_title" class="title"></h1>
+      <div id="research_data"></div>
     </div>
   </body>
 
